--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -170,24 +170,25 @@ main section {
     color: #474747;
     font-size: 30px;
     font-weight: 700;
-  
+
 }
 
-.resume-container{
+.resume-container {
     display: flex;
     gap: 50px;
 }
 
-.resume-item-description , .resume-item-institute{
+.resume-item-description,
+.resume-item-institute {
     color: #757575;
 }
 
-.resume-item-institute{
+.resume-item-institute {
     margin-bottom: 20px;
     margin-top: 0px;
 }
 
-.resume-item-title{
+.resume-item-title {
     color: #474747;
     font-size: 25px;
     font-weight: 700;
@@ -195,18 +196,38 @@ main section {
 
 }
 
-.resume-container hr{
+.resume-container hr {
     margin: 30px 0;
 }
 
-.download-cv{
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
 
-footer{
+footer {
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 200px;
     margin-top: 100px;
+}
+
+.footer-column {
+    width: 50%;
+}
+.social-link a{
+    margin-right: 25px;
+}
+
+.contact input[ type="text"] , .contact input[type="email"] ,
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
 }
